<resources>
    <string name="app_name">Android WebServer Test</string>
    <string name="txtUsername">請輸入帳號</string>
    <string name="txtPassword">請輸入密碼</string>
    <string name="txtComfirmPasssword">請再次輸入密碼</string>
    <string name="txtNickname">請輸入暱稱</string>
    <string name="txtRegister">Register</string>
    <string name="txtLogin">Login</string>
    <string name="txtResult">顯示結果</string>
    <string name="txtEdit">Edit</string>
    <string name="txtUsernameTitle">Username</string>
    <string name="txtWrong">看到這行表示有問題</string>
    <string name="txtNewPassword">NewPassword</string>
    <string name="txtNewPassword1">請輸入新密碼</string>
    <string name="txtConfirmPasswordEdit">ConfirmPassword</string>
    <string name="txtNicknameEdit">Nickname</string>
    <string name="txtLogout">logout</string>
</resources>