<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.androidwebservertest.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Login">

        <Button
            android:id="@+id/btRegister_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUsername_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Username" />

            <EditText
                android:id="@+id/etUsername_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@={viewModel.userName}"
                android:hint="@string/txtUsername"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Password" />

            <EditText
                android:id="@+id/etPassword_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@={viewModel.password}"
                android:hint="@string/txtPassword"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/btLogin_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLogin" />

        <TextView
            android:id="@+id/tvResult_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtResult" />
    </LinearLayout>
</layout>