<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.androidwebservertest.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Register">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="Register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Username" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtUsername"
                android:inputType="textPersonName"
                android:text="@={viewModel.userName}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtPassword"
                android:inputType="textPersonName"
                android:text="@={viewModel.password}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="ConfirmPassword" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtComfirmPasssword"
                android:inputType="textPersonName"
                android:text="@={viewModel.confirmPassword}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNickname"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Nickname" />

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtNickname"
                android:inputType="textPersonName"
                android:text="@={viewModel.nickName}"/>
        </LinearLayout>

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register" />

        <Button
            android:id="@+id/btLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLogin" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="嗨"
            android:text="@{viewModel.result}" />

    </LinearLayout>
</layout>